Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -86,7 +86,7 @@
     "experimental_sd = None\n",
     "\n",
     "#Set the number of simulations for our test = 1000\n",
-    "n_sim = None"
+    "n_sim = 1000"
    ]
   },
   {
