--- a/index.ipynb
+++ b/index.ipynb
@@ -120,6 +120,8 @@
     "p.fill(np.nan)\n",
     "\n",
     "#  Run a for loop for range of values in n_sim\n",
+    "for i in n\n",
+    "\n",
     "\n",
     "# number of null hypothesis rejections\n",
     "num_null_rejects = None\n",
