Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -121,7 +121,7 @@
     "\n",
     "#  Run a for loop for range of values in n_sim\n",
     "for i in range(n_sim):\n",
-    "    experi = np.norm()\n",
+    "    experi = np.random.norm.()\n",
     "\n",
     "\n",
     "# number of null hypothesis rejections\n",
