Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -122,7 +122,7 @@
     "#  Run a for loop for range of values in n_sim\n",
     "for i in range(n_sim):\n",
     "    experi = np.random.norm(experimental_mean, experimental_sd)\n",
-    "    \n",
+    "    ctrl = np.random.norm(ctrl)\n",
     "\n",
     "\n",
     "# number of null hypothesis rejections\n",
