Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -123,7 +123,7 @@
     "for i in range(n_sim):\n",
     "    experi = np.random.norm(experimental_mean, experimental_sd)\n",
     "    ctrl = np.random.norm(control_mean, control_sd)\n",
-    "    p.append(stats.ttest_ind(experi, ctrl))\n",
+    "    p.append(stats.ttest_ind(experi, ctrl)[1])\n",
     "\n",
     "\n",
     "# number of null hypothesis rejections\n",
