--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,7 @@
     "for i in range(n_sim):\n",
     "    experi = np.random.norm(experimental_mean, experimental_sd)\n",
     "    ctrl = np.random.norm(control_mean, control_sd)\n",
-    "    p.append(stats.ttest_ind(experi, ctrl)[1])\n",
+    "    p[s]stats.ttest_ind(experi, ctrl)[1])\n",
     "\n",
     "\n",
     "# number of null hypothesis rejections\n",
