Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -133,8 +133,10 @@
     "\n",
     "#  Run a for loop for range of values in n_sim\n",
     "for i in range(n_sim):\n",
-    "    experi = np.random.norm(experimental_mean, experimental_sd)\n",
-    "    ctrl = np.random.norm(control_mean, control_sd)\n",
+    "    control = np.random.normal(loc= control_mean, scale=control_sd, size=sample_size)\n",
+    "    \n",
+    "    experimental = np.random.normal(loc= experimental_mean, scale=experimental_sd, size=sample_size)\n",
+    "    \n",
     "    p[s] = stats.ttest_ind(experi, ctrl)[1]\n",
     "\n",
     "\n",
