--- a/index.ipynb
+++ b/index.ipynb
@@ -141,8 +141,8 @@
     "\n",
     "\n",
     "# number of null hypothesis rejections\n",
-    "num_null_rejects = None\n",
-    "power = None\n",
+    "num_null_rejects = np.sum(p < 0.05)\n",
+    "power = num_null_rejects/float(n_sim)\n",
     "\n",
     "power\n",
     "\n",
