--- a/index.ipynb
+++ b/index.ipynb
@@ -175,6 +175,9 @@
    "outputs": [],
    "source": [
     "# required power 0.95\n",
+    "from statsmodels.stats.power import TTestPower\n",
+    "power = TTestPower()\n",
+    "power.solve_power(effect_size=.17, alpha=0.05, power=.8)\n",
     "target = None"
    ]
   },
