--- a/index.ipynb
+++ b/index.ipynb
@@ -178,7 +178,7 @@
     "from statsmodels.stats.power import TTestPower\n",
     "power = TTestPower()\n",
     "power.solve_power(effect_size=.17, alpha=0.05, power=.8)\n",
-    "target = None"
+    "target = target = 0.8"
    ]
   },
   {
