Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -170,26 +170,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "273.51381725963785"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# required power 0.95\n",
     "from statsmodels.stats.power import TTestPower\n",
     "power = TTestPower()\n",
     "power.solve_power(effect_size=.17, alpha=0.05, power=.8)\n",
-    "# target = 0.8"
+    "target = 0.8"
    ]
   },
   {
