--- a/index.ipynb
+++ b/index.ipynb
@@ -194,13 +194,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "# minimum sample size to start the simulations \n",
     "sample_size = 12\n",
-    "current = 0\n",
+    "null_rejected = 0\n",
     "n_sim = 10000"
    ]
   },
@@ -223,18 +223,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'null_rejected' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-bf14bd766f19>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mpower_sample\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mwhile\u001b[0m \u001b[0mnull_rejected\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mempty\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn_sim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'null_rejected' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of Samples: 12 , Calculated Power = 0.4754\n",
+      "Number of Samples: 13 , Calculated Power = 0.5066\n",
+      "Number of Samples: 14 , Calculated Power = 0.5423\n",
+      "Number of Samples: 15 , Calculated Power = 0.5767\n",
+      "Number of Samples: 16 , Calculated Power = 0.6038\n",
+      "Number of Samples: 17 , Calculated Power = 0.6297\n",
+      "Number of Samples: 18 , Calculated Power = 0.658\n",
+      "Number of Samples: 19 , Calculated Power = 0.6783\n",
+      "Number of Samples: 20 , Calculated Power = 0.7056\n",
+      "Number of Samples: 21 , Calculated Power = 0.7266\n",
+      "Number of Samples: 22 , Calculated Power = 0.7481\n",
+      "Number of Samples: 23 , Calculated Power = 0.7624\n",
+      "Number of Samples: 24 , Calculated Power = 0.7864\n",
+      "Number of Samples: 25 , Calculated Power = 0.8031\n"
      ]
     }
    ],
